--- a/public/layout/sass/_tasklist.scss
+++ b/public/layout/sass/_tasklist.scss
@@ -34,6 +34,8 @@
 			width: 100%;
 			
 			&.title {
+				margin: 0 0 20px 0;
+
 				&:hover {
 					background: $background;
 					cursor: default;
