--- a/public/layout/sass/_testing.scss
+++ b/public/layout/sass/_testing.scss
@@ -34,6 +34,10 @@
 			margin: 0;
 			text-transform: uppercase;
 		}
+
+		p {
+			padding: 20px 0 0 0;
+		}
 	}
 	
 	
